@@ -414,6 +414,20 @@ literal|32
 assert|;
 if|if
 condition|(
+name|shift
+operator|>=
+name|valueSize
+condition|)
+block|{
+name|bytes
+operator|.
+name|clear
+argument_list|()
+expr_stmt|;
+block|}
+elseif|else
+if|if
+condition|(
 name|valueSize
 operator|==
 literal|64
