@@ -24,6 +24,19 @@ name|lucene
 operator|.
 name|util
 operator|.
+name|BytesRef
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|util
+operator|.
 name|LegacyNumericUtils
 import|;
 end_import
@@ -118,6 +131,8 @@ name|CharTermAttributeImpl
 import|;
 end_import
 begin_class
+annotation|@
+name|Deprecated
 DECL|class|TestNumericTokenStream
 specifier|public
 class|class
@@ -126,20 +141,26 @@ extends|extends
 name|BaseTokenStreamTestCase
 block|{
 DECL|field|lvalue
-specifier|static
 specifier|final
 name|long
 name|lvalue
 init|=
-literal|4573245871874382L
+name|random
+argument_list|()
+operator|.
+name|nextLong
+argument_list|()
 decl_stmt|;
 DECL|field|ivalue
-specifier|static
 specifier|final
 name|int
 name|ivalue
 init|=
-literal|123456
+name|random
+argument_list|()
+operator|.
+name|nextInt
+argument_list|()
 decl_stmt|;
 DECL|method|testLongStream
 specifier|public
@@ -796,6 +817,188 @@ name|close
 argument_list|()
 expr_stmt|;
 block|}
+comment|/** LUCENE-7027 */
+DECL|method|testCaptureStateAfterExhausted
+specifier|public
+name|void
+name|testCaptureStateAfterExhausted
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+comment|// default precstep
+try|try
+init|(
+name|LegacyNumericTokenStream
+name|stream
+init|=
+operator|new
+name|LegacyNumericTokenStream
+argument_list|()
+init|)
+block|{
+comment|// int
+name|stream
+operator|.
+name|setIntValue
+argument_list|(
+name|ivalue
+argument_list|)
+expr_stmt|;
+name|stream
+operator|.
+name|reset
+argument_list|()
+expr_stmt|;
+while|while
+condition|(
+name|stream
+operator|.
+name|incrementToken
+argument_list|()
+condition|)
+empty_stmt|;
+name|stream
+operator|.
+name|captureState
+argument_list|()
+expr_stmt|;
+name|stream
+operator|.
+name|end
+argument_list|()
+expr_stmt|;
+name|stream
+operator|.
+name|captureState
+argument_list|()
+expr_stmt|;
+comment|// long
+name|stream
+operator|.
+name|setLongValue
+argument_list|(
+name|lvalue
+argument_list|)
+expr_stmt|;
+name|stream
+operator|.
+name|reset
+argument_list|()
+expr_stmt|;
+while|while
+condition|(
+name|stream
+operator|.
+name|incrementToken
+argument_list|()
+condition|)
+empty_stmt|;
+name|stream
+operator|.
+name|captureState
+argument_list|()
+expr_stmt|;
+name|stream
+operator|.
+name|end
+argument_list|()
+expr_stmt|;
+name|stream
+operator|.
+name|captureState
+argument_list|()
+expr_stmt|;
+block|}
+comment|// huge precstep
+try|try
+init|(
+name|LegacyNumericTokenStream
+name|stream
+init|=
+operator|new
+name|LegacyNumericTokenStream
+argument_list|(
+name|Integer
+operator|.
+name|MAX_VALUE
+argument_list|)
+init|)
+block|{
+comment|// int
+name|stream
+operator|.
+name|setIntValue
+argument_list|(
+name|ivalue
+argument_list|)
+expr_stmt|;
+name|stream
+operator|.
+name|reset
+argument_list|()
+expr_stmt|;
+while|while
+condition|(
+name|stream
+operator|.
+name|incrementToken
+argument_list|()
+condition|)
+empty_stmt|;
+name|stream
+operator|.
+name|captureState
+argument_list|()
+expr_stmt|;
+name|stream
+operator|.
+name|end
+argument_list|()
+expr_stmt|;
+name|stream
+operator|.
+name|captureState
+argument_list|()
+expr_stmt|;
+comment|// long
+name|stream
+operator|.
+name|setLongValue
+argument_list|(
+name|lvalue
+argument_list|)
+expr_stmt|;
+name|stream
+operator|.
+name|reset
+argument_list|()
+expr_stmt|;
+while|while
+condition|(
+name|stream
+operator|.
+name|incrementToken
+argument_list|()
+condition|)
+empty_stmt|;
+name|stream
+operator|.
+name|captureState
+argument_list|()
+expr_stmt|;
+name|stream
+operator|.
+name|end
+argument_list|()
+expr_stmt|;
+name|stream
+operator|.
+name|captureState
+argument_list|()
+expr_stmt|;
+block|}
+block|}
 DECL|method|testAttributeClone
 specifier|public
 name|void
@@ -815,7 +1018,7 @@ name|att
 operator|.
 name|init
 argument_list|(
-literal|1234L
+name|lvalue
 argument_list|,
 literal|64
 argument_list|,
@@ -858,6 +1061,101 @@ argument_list|(
 name|att
 argument_list|)
 decl_stmt|;
+name|assertNotSame
+argument_list|(
+name|att
+operator|.
+name|getBytesRef
+argument_list|()
+argument_list|,
+name|copy2
+operator|.
+name|getBytesRef
+argument_list|()
+argument_list|)
+expr_stmt|;
+comment|// LUCENE-7027 test
+name|att
+operator|.
+name|init
+argument_list|(
+name|lvalue
+argument_list|,
+literal|64
+argument_list|,
+literal|8
+argument_list|,
+literal|64
+argument_list|)
+expr_stmt|;
+comment|// Exhausted TokenStream -> should return empty BytesRef
+name|assertEquals
+argument_list|(
+operator|new
+name|BytesRef
+argument_list|()
+argument_list|,
+name|att
+operator|.
+name|getBytesRef
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|copy
+operator|=
+name|TestCharTermAttributeImpl
+operator|.
+name|assertCloneIsEqual
+argument_list|(
+name|att
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+operator|new
+name|BytesRef
+argument_list|()
+argument_list|,
+name|copy
+operator|.
+name|getBytesRef
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertNotSame
+argument_list|(
+name|att
+operator|.
+name|getBytesRef
+argument_list|()
+argument_list|,
+name|copy
+operator|.
+name|getBytesRef
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|copy2
+operator|=
+name|TestCharTermAttributeImpl
+operator|.
+name|assertCopyIsEqual
+argument_list|(
+name|att
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+operator|new
+name|BytesRef
+argument_list|()
+argument_list|,
+name|copy2
+operator|.
+name|getBytesRef
+argument_list|()
+argument_list|)
+expr_stmt|;
 name|assertNotSame
 argument_list|(
 name|att
